CloudConsulting/force-app/main/default/objects/Project__c/fields/ListViewSquadLead__c.field-meta.xml
<CustomField>
    <fullName>ListViewSquadLead__c</fullName>
    <formula>IF(  SquadLead__r.Id  = $User.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListViewSquadLead</label>
    <type>Text</type>
</CustomField>