CloudConsulting/force-app/main/default/objects/Project__c/fields/ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProjectManager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectManagers</relationshipName>
    <type>Lookup</type>
</CustomField>