CloudConsulting/force-app/main/default/objects/Project__c/fields/QuantityHoursAllocated__c.field-meta.xml
<CustomField>
    <fullName>QuantityHoursAllocated__c</fullName>
    <label>QuantityHoursAllocated</label>
    <summarizedField>Project_Resources__c.RequieredHours__c</summarizedField>
    <summaryForeignKey>Project_Resources__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>