CloudConsulting/force-app/main/default/objects/Project__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Project_Resources__c.Rate_Per_Hours_Num__c</summarizedField>
    <summaryForeignKey>Project_Resources__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>