CloudConsulting/force-app/main/default/objects/Project__c/validationRules/Invalid_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Date</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c  &lt;  StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Invalid Date!</errorMessage>
</ValidationRule>