CloudConsulting/force-app/main/default/objects/Project__c/validationRules/veify_Squad_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>veify_Squad_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Status__c, &quot;In Progress&quot;), IF(ISBLANK(SquadLead__c), TRUE, FALSE), FALSE)</errorConditionFormula>
    <errorDisplayField>SquadLead__c</errorDisplayField>
    <errorMessage>You must assign a team leader</errorMessage>
</ValidationRule>