CloudConsulting/force-app/main/default/objects/Project__c/validationRules/Verify_PM.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_PM</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(Status__c, &quot;In Progress&quot;), IF(ISBLANK(ProjectManager__c ), TRUE, FALSE), FALSE)</errorConditionFormula>
    <errorDisplayField>ProjectManager__c</errorDisplayField>
    <errorMessage>You must assign a project manager to the project</errorMessage>
</ValidationRule>