CloudConsulting/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>QuantityHours__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>QuantityHoursAllocated__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>ProjectManager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>