CloudConsulting/force-app/main/default/objects/Project__c/listViews/Project_Manager.listView-meta.xml
<ListView>
    <fullName>Project_Manager</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>SquadLead__c</columns>
    <columns>ProjectManager__c</columns>
    <filterScope>Everything</filterScope>
    <label>Project Manager</label>
</ListView>