CloudConsulting/force-app/main/default/objects/Project__c/listViews/Rol_Recurso_Horas_Reporte_general.listView-meta.xml
<ListView>
    <fullName>Rol_Recurso_Horas_Reporte_general</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Rol/Recurso Horas Reporte general</label>
</ListView>