CloudConsulting/force-app/main/default/objects/Project__c/listViews/SquadLead.listView-meta.xml
<ListView>
    <fullName>SquadLead</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Status__c</columns>
    <columns>SquadLead__c</columns>
    <columns>ProjectManager__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ListViewSquadLead__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>SquadLead</label>
</ListView>